# foundry

./: Cargo.toml
anvil/core/: Cargo.toml
chisel/: Cargo.toml
cli/: Cargo.toml
evm/: Cargo.toml
ui/: Cargo.toml
